--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -73,3 +73,11 @@ html, body {
 .personal-information {
     border-left: 1px solid rgb(221, 221, 221);
 }
+
+.left-border {
+    border-left: 1px solid rgb(221, 221, 221);
+}
+
+.add-button {
+    padding-top: 20px;
+}
