--- a/CV.Management.Web/Views/Shared/_FileUpload.cshtml
+++ b/CV.Management.Web/Views/Shared/_FileUpload.cshtml
@@ -4,7 +4,7 @@
 </div>
 
 <div class="row">
-    @using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data"}))
+    @using (Html.BeginForm("Upload", "Cv", FormMethod.Post, new { enctype = "multipart/form-data"}))
     {
     <div class="col-md-12">
         <input id="file_upload" type="file" name="file" class="btn btn-default" />
