--- a/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
 
-    @using (Html.BeginForm("Education", "Home", FormMethod.Post))
+    @using (Html.BeginForm("Education", "Cv", FormMethod.Post))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
