--- a/CV.Management.Web/Views/Shared/_Education.cshtml
+++ b/CV.Management.Web/Views/Shared/_Education.cshtml
@@ -2,48 +2,52 @@
 
 <div class="row">
 
-    @using (Html.BeginForm("Education", "Home", FormMethod.Post))
+    @using (Html.BeginForm("Education", "Cv", FormMethod.Post))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
 
-        foreach (var item in Model.Education)
-        {
-            <div class="row">
-                <div class="col-md-2">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.FromYear, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.FromYear, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.FromYear)
+        <div id="education_container">
+            @for (var i = 0; i < Model.Education.Count; i++)
+            {
+                <div class="education_row row">
+                    @*@Html.HiddenFor(m => m.Education[i].ID)*@
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Education[i].FromYear, new { @class = "education-from-year-label control-label" })
+                            @Html.TextBoxFor(model => model.Education[i].FromYear, new { @class = "education-from-year-input form-control" })
+                            @Html.ValidationMessageFor(model => model.Education[i].FromYear, "", new { @class = "education-from-year-validation" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Education[i].ToYear, new { @class = "education-to-year-label control-label" })
+                            @Html.TextBoxFor(model => model.Education[i].ToYear, new { @class = "education-to-year-input form-control" })
+                            @Html.ValidationMessageFor(model => model.Education[i].ToYear, "", new { @class = "education-to-year-validation" })
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Education[i].Institution, new { @class = "education-institution-label control-label" })
+                            @Html.TextBoxFor(model => model.Education[i].Institution, new { @class = "education-institution-input form-control" })
+                            @Html.ValidationMessageFor(model => model.Education[i].Institution, "", new { @class = "education-institution-validation" })
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Education[i].Degree, new { @class = "education-degree-label control-label" })
+                            @Html.TextBoxFor(model => model.Education[i].Degree, new { @class = "education-degree-input form-control" })
+                            @Html.ValidationMessageFor(model => model.Education[i].Degree, "", new { @class = "education-degree-validation" })
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.ToYear, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.ToYear, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.ToYear)
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.Institution, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.Institution, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.Institution)
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.Degree, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.Degree, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.Degree)
-                    </div>
-                </div>
-            </div>
-        }
+            }
+
+        </div>
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
-                <p><img id="position_add" src="~/Content/Images/add.png" /> ADD EDUCATION</p>
+                <p><img id="education_add" src="~/Content/Images/add.png" /> ADD EDUCATION</p>
             </div>
         </div>
 
