--- a/CV.Management.Web/Views/Shared/_Language.cshtml
+++ b/CV.Management.Web/Views/Shared/_Language.cshtml
@@ -3,7 +3,7 @@
 
 <div class="row">
 
-    @using (Html.BeginForm("Language", "Home", FormMethod.Post))
+    @using (Html.BeginForm("Language", "Cv", FormMethod.Post))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
