--- a/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
+++ b/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CV.Management.Web.Models.PersonalInformationViewModel
 <div class="row">
 
-    @using (Html.BeginForm("PersonalInformation", "Home", FormMethod.Post))
+    @using (Html.BeginForm("PersonalInformation", "Cv", FormMethod.Post))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
