Added row deletion. Generation project added.

--- a/CV.Management.Web/Views/Shared/_Education.cshtml
+++ b/CV.Management.Web/Views/Shared/_Education.cshtml
@@ -10,37 +10,45 @@
         <div id="education_container">
             @for (var i = 0; i < Model.Education.Count; i++)
             {
-                <div class="education_row row">
-                    @*@Html.HiddenFor(m => m.Education[i].ID)*@
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Education[i].FromYear, new { @class = "education-from-year-label control-label" })
-                            @Html.TextBoxFor(model => model.Education[i].FromYear, new { @class = "education-from-year-input form-control" })
-                            @Html.ValidationMessageFor(model => model.Education[i].FromYear, "", new { @class = "education-from-year-validation" })
+            <div class="education_row row">
+                @*@Html.HiddenFor(m => m.Education[i].ID)*@
+                <div class="col-md-11">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Education[i].FromYear, new { @class = "education-from-year-label control-label" })
+                                @Html.TextBoxFor(model => model.Education[i].FromYear, new { @class = "education-from-year-input form-control" })
+                                @Html.ValidationMessageFor(model => model.Education[i].FromYear, "", new { @class = "education-from-year-validation" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Education[i].ToYear, new { @class = "education-to-year-label control-label" })
-                            @Html.TextBoxFor(model => model.Education[i].ToYear, new { @class = "education-to-year-input form-control" })
-                            @Html.ValidationMessageFor(model => model.Education[i].ToYear, "", new { @class = "education-to-year-validation" })
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Education[i].ToYear, new { @class = "education-to-year-label control-label" })
+                                @Html.TextBoxFor(model => model.Education[i].ToYear, new { @class = "education-to-year-input form-control" })
+                                @Html.ValidationMessageFor(model => model.Education[i].ToYear, "", new { @class = "education-to-year-validation" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Education[i].Institution, new { @class = "education-institution-label control-label" })
-                            @Html.TextBoxFor(model => model.Education[i].Institution, new { @class = "education-institution-input form-control" })
-                            @Html.ValidationMessageFor(model => model.Education[i].Institution, "", new { @class = "education-institution-validation" })
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Education[i].Institution, new { @class = "education-institution-label control-label" })
+                                @Html.TextBoxFor(model => model.Education[i].Institution, new { @class = "education-institution-input form-control" })
+                                @Html.ValidationMessageFor(model => model.Education[i].Institution, "", new { @class = "education-institution-validation" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Education[i].Degree, new { @class = "education-degree-label control-label" })
-                            @Html.TextBoxFor(model => model.Education[i].Degree, new { @class = "education-degree-input form-control" })
-                            @Html.ValidationMessageFor(model => model.Education[i].Degree, "", new { @class = "education-degree-validation" })
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Education[i].Degree, new { @class = "education-degree-label control-label" })
+                                @Html.TextBoxFor(model => model.Education[i].Degree, new { @class = "education-degree-input form-control" })
+                                @Html.ValidationMessageFor(model => model.Education[i].Degree, "", new { @class = "education-degree-validation" })
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-1">
+                    <img class="remove-button education-remove" src="~/Content/Images/remove.png" />
+                </div>
+            </div>
             }
 
         </div>
