--- a/CV.Management.Web/Views/Shared/_NoticePeriod.cshtml
+++ b/CV.Management.Web/Views/Shared/_NoticePeriod.cshtml
@@ -10,9 +10,9 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
-                    @Html.LabelFor(model => Model.Period, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => Model.Period, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => Model.Period)
+                    @Html.LabelFor(model => Model.NoticePeriod, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => Model.NoticePeriod, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => Model.NoticePeriod)
                 </div>
             </div>
         </div>
