--- a/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalCourses.cshtml
@@ -2,46 +2,53 @@
 
 <div class="row">
 
-    @using (Html.BeginForm("Education", "Cv", FormMethod.Post))
+    @using (Html.BeginForm("AdditionalCourses", "Cv", FormMethod.Post))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
 
-        foreach (var item in Model.Courses)
-        {
-
-        <div class="row">
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.NumberOfDays, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => item.NumberOfDays, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.NumberOfDays)
-
+        <div id="courses_container">
+            @for (var i = 0; i < Model.Courses.Count; i++)
+            {
+                <div class="courses_row row">
+                    <div class="col-md-11">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Courses[i].NumberOfDays, new { @class = "courses-number-of-days-label control-label" })
+                                    @Html.TextBoxFor(model => model.Courses[i].NumberOfDays, new { @class = "courses-number-of-days-input form-control" })
+                                    @Html.ValidationMessageFor(model => model.Courses[i].NumberOfDays, "", new { @class = "courses-number-of-days-validation" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Courses[i].Year, new { @class = "courses-year-label control-label" })
+                                    @Html.TextBoxFor(model => model.Courses[i].Year, new { @class = "courses-year-input form-control" })
+                                    @Html.ValidationMessageFor(model => model.Courses[i].Year, "", new { @class = "courses-year-validation" })
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Courses[i].CourseName, new { @class = "courses-name-label control-label" })
+                                    @Html.TextBoxFor(model => model.Courses[i].CourseName, new { @class = "courses-name-input form-control" })
+                                    @Html.ValidationMessageFor(model => model.Courses[i].CourseName, "", new { @class = "courses-name-validation" })
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Courses[i].Trainer, new { @class = "courses-trainer-label control-label" })
+                                    @Html.TextBoxFor(model => model.Courses[i].Trainer, new { @class = "courses-trainer-input form-control" })
+                                    @Html.ValidationMessageFor(model => model.Courses[i].Trainer, "", new { @class = "courses-trainer-validation" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <img class="remove-button courses-remove" src="~/Content/Images/remove.png" />
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.Year, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => item.Year, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.Year)
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.CourseName, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => item.CourseName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.CourseName)
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.Trainer, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => item.Trainer, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.Trainer)
-                </div>
-            </div>
+            }
         </div>
-        }
 
         <div class="row">
             <div class="col-md-12 text-center add-button">
