--- a/CV.Management.Web/Views/Shared/_Language.cshtml
+++ b/CV.Management.Web/Views/Shared/_Language.cshtml
@@ -8,34 +8,42 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
 
-        foreach (var item in Model.Languages)
-        {
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.LanguageName, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => item.LanguageName, new SelectList(Enum.GetValues(typeof(LanguageEnum))), "Language", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.LanguageName)
+        <div id="language_container">
+            @for (var i = 0; i < Model.Languages.Count; i++)
+            {
+            <div class="language_row row">
+                <div class="col-md-11">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Languages[i].LanguageName, new { @class = "language-name-label control-label" })
+                                @Html.EnumDropDownListFor(model => model.Languages[i].LanguageName, "Language", new { @class = "language-name-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Languages[i].LanguageName, "", new { @class = "language-name-validation" })
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Languages[i].SpokenLevel, new { @class = "language-spoken-label control-label" })
+                                @Html.EnumDropDownListFor(model => model.Languages[i].SpokenLevel, "Spoken level", new { @class = "language-spoken-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Languages[i].SpokenLevel, "", new { @class = "language-spoken-validation" })
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Languages[i].WrittenLevel, new { @class = "language-written-label control-label" })
+                                @Html.EnumDropDownListFor(model => model.Languages[i].WrittenLevel, "Written level", new { @class = "language-written-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Languages[i].WrittenLevel, "", new { @class = "language-written-validation" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <img class="remove-button language-remove" src="~/Content/Images/remove.png" />
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.SpokenLevel, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => item.SpokenLevel, new SelectList(Enum.GetValues(typeof(LevelEnum))), "Spoken level", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.SpokenLevel)
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    @Html.LabelFor(model => item.WrittenLevel, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => item.WrittenLevel, new SelectList(Enum.GetValues(typeof(LevelEnum))), "Written level", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => item.WrittenLevel)
-                </div>
-            </div>
+            }
         </div>
 
-        }
         <div class="row">
             <div class="col-md-12 text-center add-button">
                 <p><img id="position_add" src="~/Content/Images/add.png" /> ADD LANGUAGE</p>
