--- a/CV.Management.Web/Views/Shared/_Memberships.cshtml
+++ b/CV.Management.Web/Views/Shared/_Memberships.cshtml
@@ -7,35 +7,45 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
 
-        foreach (var item in Model.Memberships)
-        {
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.FromTime, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.FromTime, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.FromTime)
+        <div id="membership_container">
+            @for (var i = 0; i < Model.Memberships.Count; i++)
+            {
+            <div class="membership_row row">
+                <div class="col-md-11">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Memberships[i].FromTime, new { @class = "membership-from-time-label control-label" })
+                                @Html.TextBoxFor(model => model.Memberships[i].FromTime, new { @class = "membership-from-time-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Memberships[i].FromTime, "", new { @class = "membership-from-time-validation" })
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Memberships[i].ToTime, new { @class = "membership-to-time-label control-label" })
+                                @Html.TextBoxFor(model => model.Memberships[i].ToTime, new { @class = "membership-tom-time-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Memberships[i].ToTime, "", new { @class = "membership-tom-time-label-validation" })
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.ToTime, new { @class = "control-label" })
-                        @Html.TextBoxFor(model => item.ToTime, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.ToTime)
-                    </div>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        @Html.LabelFor(model => item.Description, new { @class = "control-label" })
-                        @Html.TextAreaFor(model => item.Description, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => item.Description)
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Memberships[i].Description, new { @class = "membership-description-label control-label" })
+                                @Html.TextAreaFor(model => model.Memberships[i].Description, new { @class = "membership-description-label form-control" })
+                                @Html.ValidationMessageFor(model => model.Memberships[i].Description, "", new { @class = "membership-description-validation" })
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-1">
+                    <img class="remove-button membership-remove" src="~/Content/Images/remove.png" />
+                </div>
             </div>
-        }
+            }
+        </div>
+
         <div class="row">
             <div class="col-md-12 text-center">
                 <p><img id="position_add" src="~/Content/Images/add.png" /> ADD MEMBERSHIP</p>
